# ai-travel-agent

./: .vercelignore  DEPLOYMENT.md  README.md  api_server.py  app.py  chat.html  index.html  logs-lesleykaps-ai-travel-agent-main-app.py-2025-09-27T05_15_19.988Z.txt  logs-lesleykaps-ai-travel-agent-main-app.py-2025-09-27T06_20_07.773Z.txt  pyproject.toml  requirements.txt  script.js  setup_env.py  style.css  styles.css  utils.py  vercel.json
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
agents/: agent.py
agents/tools/: flights_finder.py  hotels_finder.py
agents/utils/: city_standardizer.py  env_utils.py
api/: index.py
